# TrafficSim

./: .gitignore  Cargo.toml  build.sh  index.html  makefile
.github/workflows/: main.yml
assets/: proba.txt
src/: assets.cpp  assets.hpp  bezier_curve.cpp  bezier_curve.hpp  context_menu.cpp  context_menu.hpp  dragable.cpp  dragable.hpp  game.cpp  game.hpp  index.html  intersection.cpp  intersection.hpp  main.cpp  main.rs  movable_point.cpp  movable_point.hpp  road_network.cpp  road_network.hpp  road_segment.cpp  road_segment.hpp  toolbox.cpp  toolbox.hpp
